avoid scrollbar for full image on mobile

--- a/src/app/photos/components/grid-view/grid-view.component.scss
+++ b/src/app/photos/components/grid-view/grid-view.component.scss
@@ -1,3 +1,5 @@
+@import '../../../../variables';
+
 .full-image {
     display: grid;
     text-align: center;
@@ -54,5 +56,12 @@
             width: 40px;
             height: 30px;
         }
+    }
+}
+
+@media (max-width: $mobileBreakpoint) {
+    .full-image {
+        height: calc(100vh - 36px - 29.25px);
+        padding: 0;
     }
 }
